--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           <h2 class="frame-4">WEBSITE</h2>
           <h2 class="frame-5">
             <span>ACTION,</span>
-            <span>EMOTION,</span>
-            <span>HARD WORK</span>
+            <span>DRAMA,</span>
+            <span>EMOTION</span>
           </h2>
           <a class="sp-circle-link" href="#">by Nilay</a>
         </div>
